fix .invisible

--- a/diplom/styles/portfolio.scss
+++ b/diplom/styles/portfolio.scss
@@ -96,8 +96,14 @@
 .invisible__content {
     display: none;
     position: absolute;
-    width: calc(100% - 12px);
-    height: calc(100% - 12px);
+    width: 100%;
+    height: 100%;
+
+    @include scale(1024) {
+        
+        width: calc(100% - 12px);
+        height: calc(100% - 12px);
+    }
 }
 
 .invisible {
